Implement Phase 1 security and integration improvements